feat: endpoints para listar subcategorias de Perseo
